cmake_minimum_required(VERSION 3.23)
project(aoc_2022)

set(CMAKE_CXX_STANDARD 23)

set(COMMON
        src/aoc_common/input_handler.cpp src/aoc_common/aoc_puzzle.cpp src/aoc_common/aoc_puzzle.h src/aoc_common/regex_tokens.cpp)

include_directories(src/aoc_common)

add_executable(day1 src/day1/day1_main.cpp ${COMMON})
add_executable(day2 src/day2/day2_main.cpp ${COMMON})
add_executable(day3 src/day3/day3_main.cpp ${COMMON})
add_executable(day4 src/day4/day4_main.cpp ${COMMON})
add_executable(day5 src/day5/day5_main.cpp ${COMMON})
add_executable(day6 src/day6/day6_main.cpp ${COMMON})
add_executable(day7 src/day7/day7_main.cpp ${COMMON})
add_executable(day8 src/day8/day8_main.cpp ${COMMON})
add_executable(day9 src/day9/day9_main.cpp ${COMMON})
add_executable(day10 src/day10/day10_main.cpp ${COMMON})
add_executable(day11 src/day11/day11_main.cpp ${COMMON})
add_executable(day12 src/day12/day12_main.cpp ${COMMON})
add_executable(day13 src/day13/day13_main.cpp ${COMMON})
add_executable(day14 src/day14/day14_main.cpp ${COMMON})
add_executable(day15 src/day15/day15_main.cpp ${COMMON})
add_executable(day16 src/day16/day16_main.cpp ${COMMON})
add_executable(day17 src/day17/day17_main.cpp ${COMMON})
add_executable(day18 src/day18/day18_main.cpp ${COMMON})
add_executable(day19 src/day19/day19_main.cpp ${COMMON})
add_executable(day20 src/day20/day20_main.cpp ${COMMON})
add_executable(day21 src/day21/day21_main.cpp ${COMMON})
add_executable(day22 src/day22/day22_main.cpp ${COMMON})
add_executable(day23 src/day23/day23_main.cpp ${COMMON})
add_executable(day24 src/day24/day24_main.cpp ${COMMON})
add_executable(day25 src/day25/day25_main.cpp ${COMMON})
